# reddit-context-agent

./: LICENSE  README.md
backend/: .envsample  README.md  agent.py  main.py  pyproject.toml  reddit_client.py  schemas.py  test_backend.py
eval_harness/: eval_results.md  pyproject.toml  run_eval.py  test_post.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
