[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]
